--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="preload" as="style" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous" onload="this.rel='stylesheet'">
         <link rel="preload" as="font" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700," rel="stylesheet" onload="this.rel='stylesheet'">
         <link rel="preload" as="font" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" onload="this.rel='stylesheet'">
-        <link rel="preload" as="style" href="dist/css/style.min.css" onload="this.rel='stylesheet'">
+        <link rel="stylesheet" href="dist/css/style.min.css">
     </head>
     <body>
 
