--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Utah's top digital marketing agency">
         <meta name="author" content="Affinity Digital Marketing Agency">
+        <meta name="google-site-verification" content="VSMdGMZiNLh8okRXLDgDGe6H-nLabEBC3obU-06YLhw" />
 
         <link rel="icon" type="image/png" sizes="32x32" href="dist/img/affinity-letter.png">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
