--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
     <body>
 
-        <nav class="masthead navbar navbar-expand-lg">
+        <nav class="masthead navbar navbar-expand-lg fixed-top">
             <a class="logo navbar-brand" href="#"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="fa fa-bars"></span>
@@ -53,7 +53,7 @@
                 <div class="content text-center">
                     <div class="logo"></div>
                 </div>
-                <p class="email">info@amslocal.com</p>
+                <p class="email">info@affinityhq.com</p>
                 <p class="phone">(801) 877-1802</p>
                 <div class="arrow-icon">
                     <span class="fa fa-angle-down"></span>
