alt and meta tags

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <title>AffinityHQ</title>
 
-        <meta charset="UTF-8">
+        <meta http-equiv="Content-Type" content="text/html;" charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Utah's top digital marketing agency">
+        <meta name="description" content="We want to change the way companies interact with their audience, employees & clients. No matter how big we get, we are always guided by these core values.">
         <meta name="author" content="Affinity Digital Marketing Agency">
         <meta name="google-site-verification" content="VSMdGMZiNLh8okRXLDgDGe6H-nLabEBC3obU-06YLhw" />
 
@@ -155,7 +155,7 @@
                         <div class="service service1">
                             <div class="overlay"></div>
                             <div class="content">
-                                <img class="icon1" src="dist/img/affinity-service3.png">
+                                <img class="icon1" src="dist/img/affinity-service3.png" alt="Affinity digital marketing custom websites">
                                 <h2 class="title">Custom Website <br> & Updates</h2>
                             </div>
                         </div>
@@ -165,7 +165,7 @@
                         <div class="service service2">
                             <div class="overlay"></div>
                             <div class="content">
-                                <img src="dist/img/affinity-service2.png">
+                                <img src="dist/img/affinity-service2.png" alt="Affinity digital marketing team of experts">
                                 <h2 class="title">Full Team of Experts in <br> Every Category</h2>
                             </div>
                         </div>
@@ -175,7 +175,7 @@
                         <div class="service service3">
                             <div class="overlay"></div>
                             <div class="content">
-                                <img src="dist/img/affinity-service4.png">
+                                <img src="dist/img/affinity-service4.png" alt="Affinity digital marketing custom content">
                                 <h2 class="title">Custom Content For <br> You Specifically</h2>
                             </div>
                         </div>
@@ -185,7 +185,7 @@
                         <div class="service service4">
                             <div class="overlay"></div>
                             <div class="content">
-                                <img src="dist/img/affinity-service5.png">
+                                <img src="dist/img/affinity-service5.png" alt="Affinity digital marketing website updates">
                                 <h2 class="title">Constantly Updating <br> You Every Month</h2>
                             </div>
                         </div>
@@ -195,7 +195,7 @@
                         <div class="service service5">
                             <div class="overlay"></div>
                             <div class="content">
-                                <img src="dist/img/affinity-service1.png">
+                                <img src="dist/img/affinity-service1.png" alt="Affinity digital marketing results matter">
                                 <h2 class="title">Performance-Based <br> Guarantee - Results Matter</h2>
                             </div>
                         </div>
@@ -205,7 +205,7 @@
                         <div class="service service6">
                             <div class="overlay"></div>
                             <div class="content">
-                                <img src="dist/img/affinity-service6.png">
+                                <img src="dist/img/affinity-service6.png" alt="Affinity digital marketing online needs">
                                 <h2 class="title">360 Solution For All <br> Online Needs</h2>
                             </div>
                         </div>
@@ -258,7 +258,7 @@
                         <p class="lead">Fill out the form below for a free consoltation</p>
                     </div>
 
-                    <form action="https://formspree.io/info@amslocal.com" method="POST">
+                    <form action="https://formspree.io/info@affinityhq.com" method="POST">
                         <div class="container">
                             <div class="form-group">
                                 <label>Business Name</label>
