--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                 <div class="content text-center">
                     <div class="logo"></div>
                 </div>
-                <p class="email">info@affinityhq.com</p>
-                <p class="phone">(801) 877-1802</p>
+                <a href="mailto:info@affinityhq.com"><p class="email">info@affinityhq.com</p></a>
+                <a href="tel:801-877-1802"><p class="phone">(801) 877-1802</p></a>
                 <div class="arrow-icon">
                     <span class="fa fa-angle-down"></span>
                 </div>
@@ -222,7 +222,7 @@
                     <div class="col-lg-6">
                         <div class="content-wrap">
                             <div class="content">
-                                <h2 class="title">"Marketing 101: Go <br> where the people are."</h2>
+                                <h1 class="title">"Marketing 101: Go <br> where the people are."</h1>
                                 <hr>
                                 <p class="author"><span class="icon"></span>AffinityHQ</p>
                             </div>
@@ -288,7 +288,7 @@
                         </div>
                     </form>
 
-                    <p class="disclaimer">Have questions?<br>Call us today! (801) 877-1802</p>
+                    <a href="tel:801-877-1802"><p class="disclaimer">Have questions?<br>Call us today! (801) 877-1802</p></a>
                 </div>
             </div>
 
@@ -310,6 +310,7 @@
                         <a href="https://www.instagram.com/affinity_ams/"><span class="fa fa-instagram"></span></a>
                     </li>
                 </ul>
+                <h2 class="address">555 State St Suite No. 203, Orem, UT 84058</h2>
                 <h4 class="copy text-center"><span class="fa fa-copyright"></span> 2017 - All rights reserved</h4>
             </div>
 
