--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <meta name="description" content="We want to change the way companies interact with their audience, employees & clients. No matter how big we get, we are always guided by these core values.">
         <meta name="author" content="Affinity Digital Marketing Agency">
         <meta name="google-site-verification" content="VSMdGMZiNLh8okRXLDgDGe6H-nLabEBC3obU-06YLhw" />
+        <meta name="google-site-verification" content="TdO4m_MP034fGEPwA7ZM42CiI8ODBxTliauWMPCK2ok" />
 
         <link rel="icon" type="image/png" sizes="32x32" href="dist/img/affinity-letter.png">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
